GRAMMAR

REGEX -> UNION_EXPR

UNION_EXPR -> UNION_EXPR | ANCHORED_EXPR || ANCHORED_EXPR

ANCHORED_EXPR -> ^ CONCAT_EXPR $ || ^ CONCAT_EXPR || CONCAT_EXPR $ || CONCAT_EXPR

CONCAT_EXPR -> CONCAT_EXPR QUANTIFIED_EXPR || QUANTIFIED_EXPR || CONCAT_EXPR LOOKAHEAD

LOOKAHEAD -> ( ? = UNION_EXPR ) || ( ? ! UNION_EXPR )

QUANTIFIED_EXPR -> KLEENE_EXPR || MATCH_EXPR || OPT_EXPR || RANGES_EXPR || LAZY_EXPR || EXPR

LAZY_EXPR -> LAZYFIABLE_EXPR ?

LAZIFIABLE_EXPR -> KLEENE_EXPR || MATCH_EXPR || OPT_EXPR || RANGES_EXPR

KLEENE_EXPR -> EXPR *

MATCH_EXPR -> EXPR +

OPT_EXPR -> EXPR ?

RANGES_EXPR -> EXPR { RANGE }

RANGE -> NUM || NUM , || NUM , NUM || , NUM

EXPR -> ( UNION_EXPR ) || ENCLOSED_EXPR

ENCLOSED_EXPR -> EXTENDED_CHAR || CHAR_CLASS || ε

EXTENDED_CHAR -> DIGIT || NON-DIGIT || ALPHANUM || NON-ALPHANUM || ... || CHAR || NUM || UNICODE_CHAR

DIGIT -> ESC d
NON-DIGIT -> ESC D 
ALPHANUM -> ESC w 
NON-ALPHANUM -> ESC W 
 .
 .
 .
ASCII_CHAR -> ESC x HEX HEX
UNICODE_CHAR -> ESC u UNICODE_POINT
UNICODE_POINT -> HEX HEX HEX HEX || HEX HEX HEX HEX HEX
HEX -> 0 || 1 || 2 || ... || F
ESC -> \

CHAR_CLASS -> [ CHAR_CLASS_INNER ]

CHAR_CLASS_INNER -> ^ CHAR_CLASS_EXPR || CHAR_CLASS_EXPR

CHAR_CLASS_EXPR -> CHAR_CLASS_EXPR EXTENDED_CHAR || CHAR_CLASS_EXPR CHAR_CLASS_RANGE || EXTENDED_CHAR || CHAR_CLASS_RANGE

CHAR_CLASS_RANGE -> CHAR - CHAR || NUM - NUM
